--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					<div class="container">
 						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
-							Our goal is to make data simple, actionable, and empowering<br class="mobile-hide" />
-							for coaches, parents, and young players alike<a href="http://html5up.net" class="nobr">HTML5 UP</a>
+							Our goal is to make data, actionable and empowering<br class="mobile-hide" />
+							for coaches, parents, and young players alike<a href="http://html5up.net" class="nobr"></a>
 						</p>
 						<p class="style3"> We transform game stats into clear, actionable insights that help coaches guide, parents support, and young players develop with purpose.
 						We bring the edge back to the game—fueling friendly competition with real stats that players can chase, track, and beat.</p>
