--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="container">
 						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
- 						 Our goal is to make data actionable and empowering<br class="mobile-hide" />
+ 						 Our goal is to make data actionable and empowering<br/>
 						  for coaches, parents, and young players alike
 						</p>
 
