--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
-														<a href="">X</a><br>
-														<a href="https://www.linkedin.com/company/106847935/">Linked In</a><br>
+														<a href="">X</a><br />
+														<a href="https://www.linkedin.com/company/106847935/">Linked In</a><br />
 														<a href="">Facebook</a>
 													</p>
 												</section>
