--- a/Login_Page.html
+++ b/Login_Page.html
@@ -14,9 +14,12 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<section id="header" class="wrapper">
-
+	<!-- Header -->
+	<section id="header" class="wrapper">
+		<div id="logo">
+			<h1><a href="index.html">Login</a></h1>
+			<p>Secure access to your dashboard</p>
+		</div>
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Escape Velocity</a></h1>
